# retro

./: .gitignore  .readthedocs.yaml  Makefile  README.md  notes.md  pyproject.toml
documentation/: requirements.txt
documentation/source/: advanced.rst  agent_size.rst  conf.py  index.rst  introduction.rst  large_boards.rst  nav.rst  nav_v1.rst  pedagogy.rst  reinforcement_learning.rst  snake.rst
retro/: agent.py  clock.py  errors.py  game.py  graph.py  grid.py  validation.py  view.py
retro/examples/: flight.py  snake.py
retro/examples/labyrinth/: __init__.py  player.py
src/retro/: agent.py  errors.py  game.py  graph.py  input.py  validation.py  view.py
src/retro/examples/: snake.py
src/retro/examples/beast/: __init__.py  __main__.py  pyproject.toml
src/retro/examples/beast/agents/: beast.py  player.py
src/retro/examples/labyrinth/: __init__.py  __main__.py  goal.py  maze.py  player.py  theseus.py
src/retro/examples/nav/: __init__.py  pyproject.toml
src/retro/views/: __init__.py  _util.py  headless.py  terminal.py
