[tool.poetry]
name = "retro-games"
version = "0.1.1"
description = "A simple framework for Terminal-based games"
authors = ["Chris Proctor <chris@chrisproctor.net>"]
readme = "README.md"
packages = [
{ include = "retro" },
]

[tool.poetry.dependencies]
python = "^3.10"
blessed = "^1.20.0"
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
