[project]
name = "retro-games"
version = "2.4.0"
description = "A simple framework for Terminal-based games"
authors = [{ name = "Chris Proctor", email = "chris@chrisproctor.net>" }]
readme = "README.md"
homepage = "https://makingwithcode.org"
documentation = "https://retro-games.readthedocs.io/en/latest/"
requires-python = ">=3.10,<4.0"
dependencies = [
    "blessed>=1.33.0",
]

[tool.uv.build-backend]
module-name = "retro"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.retro-gamer]
actions = ["KEY_RIGHT", "KEY_UP", "KEY_LEFT", "KEY_DOWN"]
reward = "score"
character_set = ["@", "*", ">", "<", "^", "v"]
spatial = true

[dependency-groups]
documentation = [
    "furo>=2025.12.19",
    "sphinx>=8.1.3",
]


